WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256412
Fix CSSSelector copy constructor memory leak
https://bugs.webkit.org/show_bug.cgi?id=256412
Summary
Fix CSSSelector copy constructor memory leak
Matthieu Dubet
Reported
2023-05-06 00:48:31 PDT
Fix CSSSelector copy constructor memory leak (the ref count is never 0)
Attachments
Add attachment
proposed patch, testcase, etc.
Matthieu Dubet
Comment 1
2023-05-06 00:48:45 PDT
rdar://108836283
Matthieu Dubet
Comment 2
2023-05-08 02:27:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13570
EWS
Comment 3
2023-05-09 03:53:21 PDT
Committed
263859@main
(28bb70d0289c): <
https://commits.webkit.org/263859@main
> Reviewed commits have been landed. Closing PR #13570 and removing active labels.
EWS
Comment 4
2023-05-10 15:30:20 PDT
Committed
259548.753@safari-7615-branch
(08cf44bc2869): <
https://commits.webkit.org/259548.753@safari-7615-branch
> Reviewed commits have been landed. Closing PR #592 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug