Cherry-pick 28bb70d0289c. rdar://problem/108836283

[CSS] Fix memory leak in CSSSelector copy ctor
    https://bugs.webkit.org/show_bug.cgi?id=256412
    rdar://108836283

    Reviewed by Antti Koivisto.

    After leakRef(), the counter is already at 1, calling ref() is wrong.

    * Source/WebCore/css/CSSSelector.cpp:
    (WebCore::CSSSelector::CSSSelector):

    Canonical link: https://commits.webkit.org/263859@main

Identifier: 263769.10@safari-7616.1.14-branch